@@ -111,13 +111,13 @@ void MuseScore::readScoreError(int rv) const
 /**
  Load file \a name.
  Display message box with error if loading fails.
- Return false if OK and true on error.
+ Return true if OK and false on error.
  */
 
 bool LoadFile::load(const QString& name)
       {
       if (name.isEmpty())
-            return true;
+            return false;
 
       QFile fp(name);
       if (!fp.open(QIODevice::ReadOnly)) {
@@ -125,16 +125,18 @@ bool LoadFile::load(const QString& name)
                QWidget::tr("MuseScore: file not found:"),
                name,
                QString::null, QWidget::tr("Quit"), QString::null, 0, 1);
-            return true;
+            return false;
             }
-      if (loader(&fp)) {
+      if (!loader(&fp)) {
             QMessageBox::warning(0,
                QWidget::tr("MuseScore: load failed:"),
                error,
                QString::null, QWidget::tr("Quit"), QString::null, 0, 1);
+            fp.close();
+            return false;
             }
       fp.close();
-      return false;
+      return true;
       }
 
 //---------------------------------------------------------
@@ -1261,8 +1263,10 @@ bool Score::loadMsc(QString name)
             info.setFile(name);
             }
       QFile f(name);
-      if (!f.open(QIODevice::ReadOnly))
+      if (!f.open(QIODevice::ReadOnly)) {
+printf("loadMsc: open failed\n");
             return false;
+            }
 
       QDomDocument doc;
       int line, column;
@@ -1282,6 +1286,7 @@ bool Score::loadMsc(QString name)
 
 //---------------------------------------------------------
 //   read1
+//    return true on success
 //---------------------------------------------------------
 
 bool Score::read1(QDomElement e)
