@@ -34,8 +34,8 @@ class LoadFile {
    public:
       LoadFile() {}
       virtual ~LoadFile() {}
-      virtual bool loader(QFile* f) = 0;
-      bool load(const QString& name);
+      virtual bool loader(QFile* f) = 0;        // return false on error
+      bool load(const QString& name);           // return false on error
       QString name() const { return _name; }
       };
 
